refactor, finish logging